# deep-learning-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: cnn_config.py  couplstm_config.py  mlp_config.py  rnn_config.py
data/: README.md
docs/: architecture.md  experiments.md  implementation_notes.md  mathematical_foundations.md  results.md
notebooks/: deep_learning_demo.ipynb
src/: __init__.py
src/datasets/: __init__.py  mnist.py  text_dataset.py
src/layers/: __init__.py  convolution.py  dense_layer.py  fcn.py  flatten.py  pooling.py  sequential.py
src/models/: __init__.py  cnn.py  coupled_lstm.py  lstm.py  mlp.py  rnn.py
src/modules/: __init__.py  activations.py  base.py  conv2d.py  initializers.py  losses.py  optimizers.py  pooling.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  visualization.py
tests/: README.md  run_tests.py  test_cnn.py  test_conv2d.py  test_coupled_lstm.py  test_dense.py  test_flatten.py  test_losses.py  test_lstm.py  test_mlp.py  test_optimizers.py  test_pooling.py  test_rnn.py  test_sequential.py
